kubernetes/configs/bankaccount-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankaccount-service-deployment
  labels:
    app: bankaccount-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankaccount-service
  template:
    metadata:
      labels:
        app: bankaccount-service
    spec:
      containers:
        - name: bankaccount-service-container
          image: europe-west4-docker.pkg.dev/smartspend/smart-spend/bankaccount:latest
          ports:
            - containerPort: 6001
          resources:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
