kubernetes/configs/gateway-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service-container
          image: europe-west4-docker.pkg.dev/smartspend/smart-spend/gateway:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: "512Mi"
            requests:
              cpu: 0.5
              memory: "256Mi"
