kubernetes/configs/identity-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service-deployment
  labels:
    app: identity-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service-container
          image: europe-west4-docker.pkg.dev/smartspend/smart-spend/identity:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 1
              memory: "512Mi"
            requests:
              cpu: 0.5
              memory: "256Mi"
