kubernetes/configs/license-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license-service
  labels:
    app: license-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: license-service
  template:
    metadata:
      labels:
        app: license-service
    spec:
      containers:
        - name: license-service-container
          image: europe-west4-docker.pkg.dev/smartspend/smart-spend/license:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 1
              memory: "512Mi"
            requests:
              cpu: 0.5
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: license-service
spec:
  selector:
    app: license-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
