kubernetes/configs/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: smartspend-exteral-ip
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 4000
          - path: /license
            pathType: Prefix
            backend:
              service:
                name: license-service
                port:
                  number: 5000
          - path: /bank
            pathType: Prefix
            backend:
              service:
                name: bankaccount-service
                port:
                  number: 6001
